--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,11 @@
         <div class="center text-big bold">
             Hi! I am Rohini, OM NAMA SHIVAYA
         </div>
+        <script>
+            alert('Hi, I/m a javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        
     </body>
 </html>
